Added exercice mode

--- a/interface/index.html
+++ b/interface/index.html
@@ -21,7 +21,7 @@
     </head>
     <body id="body_">
     <div id="message_bar"></div>
-    <div id="enonce">{{ enonce }}</div>
+    <div id="enonce">{{ !enonce }}</div>
     <table id="content">
         <tr>
             <td id="regView">
