Added `Are you sure you want to leave this page` message.

--- a/interface/index.html
+++ b/interface/index.html
@@ -891,6 +891,22 @@
             }
             downloadLink.click();
         }
+
+        var confirmOnPageExit = function (e)
+        {
+            // If we haven't been passed the event get the window.event
+            e = e || window.event;
+
+            var message = 'Êtes-vous certain de vouloir quitter cette page?';
+
+            // For IE6-8 and Firefox prior to version 4
+            if (e) { e.returnValue = message; }
+
+            // For Chrome, Safari, IE8+ and Opera 12+
+            return message;
+        };
+
+        window.onbeforeunload = confirmOnPageExit;
     </script>
 </body>
 </html>
