--- a/interface/index.html
+++ b/interface/index.html
@@ -558,7 +558,6 @@
                     <span id="help_instr" class="mem_instr">instr</span><br/>
                     Ctrl+click: &Eacute;criture, Shift+click: Lecture, Alt+click: Ex&eacute;cution<br/>
                     <div id="memoryview"></div>
-                    Segment:
                     <div id="paginator"></div>
                 </div>
                 <div class="border_container">
@@ -809,23 +808,8 @@
             var paginator = $("#paginator").empty();
             var nbPages = this.getPageCount();
 
-            // get interval
-            var interval = this.getSlidingPageInterval(20);
-            if (interval == null) return;
-
-            // get pages in interval (with links except for the current page)
-            var pages = this.getPagesInInterval(interval,  function(pageIndex,  isCurrent) {
-                if (isCurrent) return "0x" + ("00000000" + (pageIndex * 20*16).toString(16)).slice(-9);
-                return $("<a>").css("cursor",  "pointer").html("0x" + ("00000000" + (pageIndex * 20*16).toString(16)).slice(-9))
-                    .attr('rel',  pageIndex + 1)
-                    .click(function(event) {
-                        editableGrid.setPageIndex(parseInt($(this).attr('rel')) - 1);
-                        addHoverMemoryView();
-                    });
-            });
-
             // "first" link
-            /*var link = $("<a>").html("<img src='" + image("gofirst.png") + "' style='height: 15px; vertical-align: middle;'/>&nbsp;");
+            var link = $("<a>").html("<img src='" + image("gofirst.png") + "' style='height: 15px; vertical-align: middle;'/>&nbsp;");
             if (!this.canGoBack()) link.css({ opacity : 0.4,  filter: "alpha(opacity=40)" });
             else link.css("cursor",  "pointer").click(function(event) { editableGrid.firstPage(); });
             paginator.append(link);
@@ -834,16 +818,19 @@
             link = $("<a>").html("<img src='" + image("prev.png") + "' style='height: 15px; vertical-align: middle;'/>&nbsp;");
             if (!this.canGoBack()) link.css({ opacity : 0.4,  filter: "alpha(opacity=40)" });
             else link.css("cursor",  "pointer").click(function(event) { editableGrid.prevPage(); });
-            paginator.append(link);*/
+            paginator.append(link);
 
-            // pages
-            //for (p = 0; p < pages.length; p++) paginator.append(pages[p]).append(" | ");
-            for (p = 0; p < pages.length; p++) {
-                paginator.append(pages[p]).append("<br/>");
-            }
+            var mem_begin = $(".editablegrid-ch:eq(1)").text();
+            paginator.append('<input id="jump_memory" type="text" value="' + mem_begin + '"/><input id="jump_memory_go" type="submit" value="Go">');
+            $("#jump_memory_go").click(function () {
+                var target = $("#jump_memory").val();
+                var page = Math.floor(parseInt(target) / 16*20);
+                editableGrid.setPageIndex(page);
+                addHoverMemoryView();
+            });
 
             // "next" link
-            /*link = $("<a>").html("<img src='" + image("next.png") + "' style='height: 15px; vertical-align: middle;'/>&nbsp;");
+            link = $("<a>").html("<img src='" + image("next.png") + "' style='height: 15px; vertical-align: middle;'/>&nbsp;");
             if (!this.canGoForward()) link.css({ opacity : 0.4,  filter: "alpha(opacity=40)" });
             else link.css("cursor",  "pointer").click(function(event) { editableGrid.nextPage(); });
             paginator.append(link);
@@ -852,7 +839,8 @@
             link = $("<a>").html("<img src='" + image("golast.png") + "' style='height: 15px; vertical-align: middle;'/>&nbsp;");
             if (!this.canGoForward()) link.css({ opacity : 0.4,  filter: "alpha(opacity=40)" });
             else link.css("cursor",  "pointer").click(function(event) { editableGrid.lastPage(); });
-            paginator.append(link);*/
+            paginator.append(link);
+
             $(".editablegrid-c0, .editablegrid-c1, .editablegrid-c2, .editablegrid-c3, .editablegrid-c4, .editablegrid-c5, .editablegrid-c6, .editablegrid-c7, .editablegrid-c8, .editablegrid-c9, .editablegrid-c10, .editablegrid-c11, .editablegrid-c12, .editablegrid-c13, .editablegrid-c14, .editablegrid-c15").click(function(e) {
               var suffix = this.classList[0].slice(-2);
               if (suffix[0] == 'c') { suffix = suffix.slice(-1); }
