Fixed stepin, forward and out buttons

--- a/interface/index.html
+++ b/interface/index.html
@@ -562,10 +562,10 @@
                 </div>
                 <div class="border_container">
                     <button onclick="assemble()" id="assemble">Assemble</button><br/><br/>
-                    <button id="run" onclick="simulate()" disable="disabled"><img src="./image/resume_co.gif"/></button>
-                    <button id="stepin" onclick="sendMsg('stepinto')" disable="disabled"><img src="./image/stepinto_co.gif"/></button>
-                    <button id="stepforward" onclick="sendMsg('stepforward')" disable="disabled"><img src="./image/stepover_co.gif"/></button>
-                    <button id="stepout" onclick="sendMsg('stepout')" disable="disabled"><img src="./image/stepreturn_co.gif"/></button>
+                    <button id="run" onclick="simulate('run')" disable="disabled"><img src="./image/resume_co.gif"/></button>
+                    <button id="stepin" onclick="simulate('stepinto')" disable="disabled"><img src="./image/stepinto_co.gif"/></button>
+                    <button id="stepforward" onclick="simulate('stepforward')" disable="disabled"><img src="./image/stepover_co.gif"/></button>
+                    <button id="stepout" onclick="simulate('stepout')" disable="disabled"><img src="./image/stepreturn_co.gif"/></button>
                     <br/>
                     Animate speed:&nbsp;<input class="regVal" id="animate_speed" type="text" value="100"/>ms
                 </div>
